SDI-4: 🎨 Not for these two - Stream.toList() doesn't compile